--- a/shop.html
+++ b/shop.html
@@ -388,12 +388,12 @@
 							</a>
 						</td>
 						<td class="product">
-							<a href="https://amzn.to/2SGSsVP" target="_blank">
+							<a href="https://amzn.to/2Qhd8SV" target="_blank">
 								<img src="images/product36.jpg" alt="roc" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Josh's Frogs ABG Mix (4 Quart/1 Gallon)</p>
-									<p>$17.56</p>
+									<p>Josh's Frogs BioBedding Tropical Bioactive Substrate</p>
+									<p>$29.99</p>
 								</div>
 							</a>
 						</td>
