--- a/critters.html
+++ b/critters.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Rainier Terrariums</title>
+		<title>Critters - Shop - Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="images/favicon.ico">
@@ -47,8 +47,40 @@
 		</ul>
 		
 		<article>
-            <div class="content">
-
+            <div class="content" style="margin-top: 125px">
+				<table>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2Ep4ACw" target="_blank">
+								<img src="images/product18.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
+									<p>$39.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2tzzi9R" target="_blank">
+								<img src="images/product26.jpg" alt="spring" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Premium Live Springtails 16oz Mini Culture</p>
+									<p>$19.99 </p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2EFSTri" target="_blank">
+								<img src="images/product27.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Pocket Pets Fast Producing Roly Polys</p>
+									<p>$22.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+				</table>
             </div>
         </article>
 
@@ -56,9 +88,9 @@
 			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
 			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
 			<div class="footer-social-section">
-				<a href="https://www.instagram.com/rainier_terrariums/"><img src="images/footer-insta-white.png" alt="Instagram" class="footer-social"></a>
-				<a href="https://twitter.com/rterrariums"><img src="images/footer-twitter-white.png" alt="Twitter" class="footer-social"></a>
-				<a href="https://www.facebook.com/rainier.terrariums"><img src="images/footer-facebook-white.png" alt="Facebook" class="footer-social"></a>
+				<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/footer-insta-white.png" alt="Instagram" class="footer-social"></a>
+				<a href="https://twitter.com/rterrariums" target="_blank"><img src="images/footer-twitter-white.png" alt="Twitter" class="footer-social"></a>
+				<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/footer-facebook-white.png" alt="Facebook" class="footer-social"></a>
 			</div>
 		</footer>
 	</body>
