--- a/plants.html
+++ b/plants.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Rainier Terrariums</title>
+		<title>Plants - Shop - Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="images/favicon.ico">
@@ -47,8 +47,68 @@
 		</ul>
 		
 		<article>
-            <div class="content">
-
+            <div class="content" style="margin-top: 125px">
+				<table>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2PI3bfD" target="_blank">
+								<img src="images/product4.jpg" alt="venus" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Nature Gift Store Adult Venus Flytrap </p>
+									<p>$12.85</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2PiIRm8" target="_blank">
+								<img src="images/product9.png" alt="mini" class="product-img">
+								<div class="product-description">
+									<p>Mini Ferns for Terrariums/Fairy Garden </p>
+									<p>$14.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2PMI63O" target="_blank">
+								<img src="images/product12.png" alt="5" class="product-img">
+								<div class="product-description">
+									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
+									<p>$17.95</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2LTLybA" target="_blank">
+								<img src="images/product15.png" alt="3" class="product-img">
+								<div class="product-description">
+									<p>3 Small Sized B52 Giant Venus Flytraps</p>
+									<p>$21.39</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2RUivII" target="_blank">
+								<img src="images/product17.png" alt="sundew" class="product-img">
+								<div class="product-description">
+									<p>Cape Sundew - Drosera capensis</p>
+									<p>$19.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/38EdCcV" target="_blank">
+								<img src="images/product20.png" alt="fig" class="product-img">
+								<div class="product-description">
+									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
+									<p>$5.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+				</table>
             </div>
         </article>
 
