--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,13 @@
 					<input type="submit" value="Send"/>
 				</form>
 			</div>
-			<footer style="position: absolute; bottom: 0; width: 100%;">
+			<footer>
 				<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
 				<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
 				<div class="footer-social-section">
-					<a href="https://www.instagram.com/rainier_terrariums/"><img src="images/footer-insta-white.png" target="_blank" alt="Instagram" class="footer-social"></a>
-					<a href="https://twitter.com/rterrariums"><img src="images/footer-twitter-white.png" target="_blank" alt="Twitter" class="footer-social"></a>
-					<a href="https://www.facebook.com/rainier.terrariums"><img src="images/footer-facebook-white.png" target="_blank" alt="Facebook" class="footer-social"></a>
+					<a href="https://www.instagram.com/rainier_terrariums/" target="_blank"><img src="images/footer-insta-white.png" target="_blank" alt="Instagram" class="footer-social"></a>
+					<a href="https://twitter.com/rterrariums" target="_blank"><img src="images/footer-twitter-white.png" target="_blank" alt="Twitter" class="footer-social"></a>
+					<a href="https://www.facebook.com/rainier.terrariums" target="_blank"><img src="images/footer-facebook-white.png" target="_blank" alt="Facebook" class="footer-social"></a>
 				</div>
 			</footer>
 		</article>
