--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 					document.getElementById("dropdown").style.display = "flex";
 				} else {
 					document.getElementById("dropdown").style.display = "none";
+					document.getElementById("sub-dropdown").style.display = "none";
+				}
+			}
+			function showHideSubNav() {
+				if (document.getElementById("sub-dropdown").style.display === "none") {
+					document.getElementById("sub-dropdown").style.display = "initial";
+				} else {
+					document.getElementById("sub-dropdown").style.display = "none";
 				}
 			}
 		</script>
@@ -34,7 +42,16 @@
 			<nav class="expand-navbar">
 				<ul>
 					<li class="active-page">Home</li>
-					<li><a href="shop.html">Shop</a></li>
+					<li class="nav-dropdown">
+						<a>Shop</a>
+						<ul>
+							<li><a href="shop.html">All</a></li>
+							<li><a href="terrariums.html">Terrariums</a></li>
+							<li><a href="materials.html">Materials</a></li>
+							<li><a href="plants.html">Plants</a></li>
+							<li><a href="critters.html">Critters</a></li>
+						</ul>
+					</li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -44,17 +61,15 @@
 		</div>
 		<ul class="dropdown" id="dropdown">
 			<li><a href="index.html">Home</a></li>
-			<li>
-				<a>Shop</a>
-				<ul class="sub-dropdown">
-					<li><a href="shop.html">All</a></li>
-					<li><a href="terrariums.html">Terrariums</a></li>
-					<li><a href="materials.html">Materials</a></li>
-					<li><a href="plants.html">Plants</a></li>
-					<li><a href="critters.html">Critters</a></li>
-				</ul>
-			</li>
+			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
 	  		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+		<ul class="sub-dropdown" id="sub-dropdown">
+			<li><a href="shop.html">All</a></li>
+			<li><a href="terrariums.html">Terrariums</a></li>
+			<li><a href="materials.html">Materials</a></li>
+			<li><a href="plants.html">Plants</a></li>
+			<li><a href="critters.html">Critters</a></li>
 		</ul>
 		<div class="title-section">
 			<div class="title-box">
