--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
 		<script>
 			function showHideNav() {
 				if (document.getElementById("dropdown").style.display === "none") {
-					document.getElementById("dropdown").style.display = "initial";
+					document.getElementById("dropdown").style.display = "flex";
 				} else {
 					document.getElementById("dropdown").style.display = "none";
+					document.getElementById("sub-dropdown").style.display = "none";
+				}
+			}
+			function showHideSubNav() {
+				if (document.getElementById("sub-dropdown").style.display === "none") {
+					document.getElementById("sub-dropdown").style.display = "initial";
+				} else {
+					document.getElementById("sub-dropdown").style.display = "none";
 				}
 			}
 		</script>
@@ -34,8 +42,17 @@
 			<nav class="expand-navbar">
 				<ul>
 					<li class="active-page">Home</li>
-					<li><a href="shop.html">Shop</a></li>
-						<li><a href="PlantCare.html">Plant Care</a></li>
+					<li class="nav-dropdown">
+						<a class="nav-dropdown-btn">Shop</a>
+						<ul class="nav-dropdown-content">
+							<li><a href="shop.html">All</a></li>
+							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="materials.html">Materials</a></li>
+							<li><a href="plants.html">Plants</a></li>
+							<li><a href="critters.html">Critters</a></li>
+						</ul>
+					</li>
+					<li><a href="PlantCare.html">Plant Care</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -44,10 +61,17 @@
 			</nav>
 		</div>
 		<ul class="dropdown" id="dropdown">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="shop.html">Shop</a></li>
-				<li><a href="PlantCare.html">Plant Care</a></li>
+			<li class="active-page">Home</li>
+			<li onclick="showHideSubNav()" style="cursor: pointer"><a>Shop</a></li>
+			<li><a href="PlantCare.html">Plant Care</a></li>
 	  		<li><a href="contact.html">Contact Us</a></li>
+		</ul>
+		<ul class="sub-dropdown" id="sub-dropdown">
+			<li><a href="shop.html">All</a></li>
+			<li><a href="terrariums.html">Terrariums</a></li>
+			<li><a href="materials.html">Materials</a></li>
+			<li><a href="plants.html">Plants</a></li>
+			<li><a href="critters.html">Critters</a></li>
 		</ul>
 		<div class="title-section">
 			<div class="title-box">
