--- a/plants.html
+++ b/plants.html
@@ -44,7 +44,7 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li class="active-page">Plants</li>
 							<li><a href="critters.html">Critters</a></li>
@@ -71,7 +71,7 @@
 			<li class="active-page">Plants</li>
 			<li><a href="critters.html">Critters</a></li>
 		</ul>
-		
+
 		<article>
             <div class="content" style="margin-top: 125px">
 				<table>
@@ -130,6 +130,16 @@
 								<div class="product-description">
 									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
 									<p>$5.99</p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2sGoZRl" target="_blank">
+								<img src="images/product38.jpg" alt="m" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Mycelium Spawn Dried Spores Kit</p>
+									<p>$14.99</p>
 								</div>
 							</a>
 						</td>
