--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
 						<a class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li class="active-page">All</li>
-							<li><a href="terrariums.html">Terrariums</a></li> 
+							<li><a href="terrariums.html">Terrariums</a></li>
 							<li><a href="materials.html">Materials</a></li>
 							<li><a href="plants.html">Plants</a></li>
 							<li><a href="critters.html">Critters</a></li>
@@ -432,6 +432,18 @@
 								</div>
 							</a>
 						</td>
+					</tr>
+						<tr>
+					<td class="product">
+						<a href="https://amzn.to/2sGoZRl" target="_blank">
+							<img src="images/product38.jpg" alt="m" class="product-img">
+							<div class="product-description">
+								<br/>
+								<p>Mycelium Spawn Dried Spores Kit</p>
+								<p>$14.99</p>
+							</div>
+						</a>
+					</td>
 					</tr>
 				</table>
 			</div>
