--- a/plants.html
+++ b/plants.html
@@ -144,6 +144,16 @@
 								</div>
 							</a>
 						</td>
+						<td class="product">
+							<a href="https://amzn.to/2ZMECmc" target="_blank">
+								<img src="images/product39.jpg" alt="mu" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Forest Organics Glow in the Dark Mushroom Growing Kit</p>
+									<p>$16.95</p>
+								</div>
+							</a>
+						</td>
 					</tr>
 				</table>
             </div>
