--- a/CritterCare.html
+++ b/CritterCare.html
@@ -42,7 +42,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="nav-dropdown">
-						<a class="nav-dropdown-btn">Shop</a>
+						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
 							<li><a href="terrariums.html">Terrariums</a></li>
