--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<ul>
 					<li class="active-page">Home</li>
 					<li class="nav-dropdown">
-						<a class="nav-dropdown-btn">Shop</a>
+						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
 							<li><a href="terrariums.html">Terrariums</a></li>
