--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="nav-dropdown">
-						<a class="nav-dropdown-btn">Shop</a>
+						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li class="active-page">All</li>
 							<li><a href="terrariums.html">Terrariums</a></li>
