--- a/template.html
+++ b/template.html
@@ -42,7 +42,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="nav-dropdown">
-						<a class="nav-dropdown-btn">Shop</a>
+						<a href="shop.html" class="nav-dropdown-btn">Shop</a>
 						<ul class="nav-dropdown-content">
 							<li><a href="shop.html">All</a></li>
 							<li><a href="terrariums.html">Terrariums</a></li> 
@@ -75,13 +75,17 @@
 			<li><a href="critters.html">Critters</a></li>
 		</ul>
 		
+		<!--for page previewing with no content-->
+		<!--<article style="height: 100vh">-->
 		<article>
             <div class="content">
 
             </div>
         </article>
 
-        <footer>
+		<!--for page previewing with no content-->
+		<!--<footer style="position: absolute; bottom: 0; width: 100%;">-->
+		<footer>
 			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
 			<h3 style="margin: 0; padding-top: 40px;">&copy; 2019 Kelson Milewski & Ryan Schlosser</h3>
 			<div class="footer-social-section">
