--- a/CritterCare.html
+++ b/CritterCare.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Critter Care - Rainier Terrariums</title>
 		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
@@ -77,87 +78,69 @@
 
 		<article>
             <div class="content">
+				<br/><br/>
+				<h1><i>Isopods</i></h1>
 
-														<br/>
-							<br/>
-							<h1><i>Isopods</i></h1>
+				<h3><u><b>Housing</b></u></h3>
+				<p> Plastic boxes with lids are preferred to keep humidity. However, if the top is not vented, the container should be regularly opened. Compressed bedding or mulch works well as a bottom layer in the container. Provide some type of material for the isopods to hide under. They should be kept in a slightly moist enclosure at room temperature.</p>
 
-							<h3><u><b> Housing </b></u></h3>
-							<p> Plastic boxes with lids are preferred to keep humidity.
-								However, if the top is not vented, the container should be regularly opened.
-								 Compressed bedding or mulch works well as a bottom layer in the container.
-								  Provide some type of material for the isopods to hide under.
-								 They should be kept in a slightly moist enclosure at room temperature. </p>
+				<h3><u><b>Watering</b></u></h3>
+				<p>Provide a water dish with wet paper towels or cotton balls. Too much standing water will cause them to drown. Use a spray bottle to mist the culture periodically.</p>
 
-								 <h3><u><b> Watering </b></u></h3>
-								 <p>Provide a water dish with wet paper towels or cotton balls.
-									 Too much standing water will cause them to drown.
-									 Use a spray bottle to mist the culture periodically </p>
+				<h3><u><b>Feeding</b></u></h3>
+				<p>Feeding your isopods is relatively easy but you need the right food or they will not be strong enough to propagate. You can feed them Lettuce, Carrot , Cucumber, or Squash.</p>
 
-							 <h3><u><b> Feeding </b></u></h3>
-							 <p>Feeding your isopods is relatively easy but you need the right food
-								  or they will not be strong enough to propagate.
-									You can feed them Lettuce, Carrot , Cucumber, or Squash. </p>
+				<br/>
+				<h1><i>SpringTails</i></h1>
 
-										<br/>
+				<h3><u><b>Housing</b></u></h3>
+				<p>Using a plastic container with lid ventilation is not required. For the substrate, use a layer of charcoal (horticultural or activated charcoal) with less than an inch of standing water on the bottom. Keep at room temperature and occasionally open the lid for air exchange. </p>
 
-											<h1><i>SpringTails</i></h1>
-											<h3><u><b> Housing </b></u></h3>
-											<p>Use a plastic container with lid ventilation is not required.
-												 For the substrate, a layer of charcoal (horticultural or activated charcoal).
-												 With less than an inch of standing water on the bottom.
-												 Keep at room temperature and occasionally open the lid for air exchange. </p>
+				<h3><u><b>Feeding</b></u></h3>
+				<p>Drop in a few grains of rice into your culture. Rice will mold over and will provide a reliable food source. Exchange the old rice with new grains if they have lost interest in the older rice.</p>
 
-										 <h3><u><b> Feeding </b></u></h3>
-										 <p>drop in a few grains of rice into your culture.
-											 Rice will mold over and will provide a reliable food source.
-											  Exchange the old rice with new grains if they have lost interest in the older rice.</p>
+				<br/>
+				<h1><i>Adding Critters To Your Setup</i></h1>
 
-												<br/>
-												<h1><i>Adding Critters To Your Setup</i></h1>
-												<h3><u><b> Basic Information </b></u></h3>
-												<p> Provide the culture a week or two to develop before pulling from it.
-													Do not transfer your whole culture into your setup if you plan on reproducing them.
-													If you want to get started with a bioactive setup we offer clean up crews in our shop.</p>
-				  </div>
-        </article>
-				<article>
-								<div class="content" style="margin-top: 125px">
-						<table>
-							<tr>
-								<td class="product">
-									<a href="https://amzn.to/2Ep4ACw" target="_blank">
-										<img src="images/product18.png" alt="iso" class="product-img">
-										<div class="product-description">
-											<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
-											<p>$39.99</p>
-										</div>
-									</a>
-								</td>
-								<td class="product">
-									<a href="https://amzn.to/2tzzi9R" target="_blank">
-										<img src="images/product26.jpg" alt="spring" class="product-img">
-										<div class="product-description">
-											<br/>
-											<p>Premium Live Springtails 16oz Mini Culture</p>
-											<p>$19.99 </p>
-										</div>
-									</a>
-								</td>
-								<td class="product">
-									<a href="https://amzn.to/2EFSTri" target="_blank">
-										<img src="images/product27.png" alt="iso" class="product-img">
-										<div class="product-description">
-											<br/>
-											<p>Pocket Pets Fast Producing Roly Polys</p>
-											<p>$22.99</p>
-										</div>
-									</a>
-								</td>
-							</tr>
-						</table>
+				<h3><u><b>Basic Information</b></u></h3>
+				<p> Provide the culture a week or two to develop before pulling from it. Do not transfer your whole culture into your setup if you plan on reproducing them. If you want to get started with a bioactive setup we offer clean up crews in our shop.</p>
+				
+				<br/><br/>
+				<table>
+					<tr>
+						<td class="product">
+							<a href="https://amzn.to/2Ep4ACw" target="_blank">
+								<img src="images/product18.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
+									<p>$39.99</p>
 								</div>
-						</article>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2tzzi9R" target="_blank">
+								<img src="images/product26.jpg" alt="spring" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Premium Live Springtails 16oz Mini Culture</p>
+									<p>$19.99 </p>
+								</div>
+							</a>
+						</td>
+						<td class="product">
+							<a href="https://amzn.to/2EFSTri" target="_blank">
+								<img src="images/product27.png" alt="iso" class="product-img">
+								<div class="product-description">
+									<br/>
+									<p>Pocket Pets Fast Producing Roly Polys</p>
+									<p>$22.99</p>
+								</div>
+							</a>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</article>
 
         <footer>
 			<img src="images/logo.png" alt="Rainier Terrariums" class="footer-logo">
